--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.10.4",
     "@zoomus/websdk": "^1.7.10",
     "D": "^1.0.0",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^4.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.14",
