--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "name": "socialmedia",
   "version": "1.7.10",
   "description": "Zoom sample app for web client WebSDK",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-prebuild": "webpack-dev-server --config webpack.config.dev.js",
+    "heroku-postbuild": "webpack -p --config ./webpack.config.dev.js --progress",
+    "build": "webpack --mode production --config ./webpack.config.dev.js",
     "start": "set NODE_ENV=development && set BABEL_ENV=development && webpack-dev-server --config webpack.config.dev.js --https false --open http://localhost:9999/index.html",
     "https": "set NODE_ENV=development && set BABEL_ENV=development && webpack-dev-server --config webpack.config.dev.js --https true --open https://localhost:9999/index.html --watch"
   },
