--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "3.7.2",
-    "redux-thunk": "2.2.0"
-  },
-  "devDependencies": {
+    "redux-thunk": "2.2.0",
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
