--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "3.7.2",
-    "redux-thunk": "2.2.0",
+    "redux-thunk": "2.2.0"
+  },
+  "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
