--- a/package.json
+++ b/package.json
@@ -21,11 +21,28 @@
   "author": "Jack Yang",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "@babel/preset-stage-1": "^7.0.0",
+    "@svgr/webpack": "^5.4.0",
     "@zoomus/websdk": "^1.7.10",
     "D": "^1.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-airbnb": "^3.0.1",
+    "css-loader": "^1.0.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "express": "^4.17.1",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jquery": "^3.4.1",
     "lodash": "^4.17.14",
@@ -38,23 +55,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-stage-0": "^7.0.0",
-    "@babel/preset-stage-1": "^7.0.0",
-    "@svgr/webpack": "^5.4.0",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-airbnb": "^3.0.1",
-    "css-loader": "^1.0.1",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^2.0.0",
+    "socket.io-client": "^1.7.4",
     "style-loader": "^0.23.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
