--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "redux-thunk": "2.2.0",
     "socket.io-client": "^1.7.4",
     "style-loader": "^0.23.1",
+    "sweetalert": "^2.1.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
