--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "7.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-stripe-elements": "^6.1.2",
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "socket.io-client": "^1.7.4",
