--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-airbnb": "^3.0.1",
+    "browserslist": "^4.16.1",
+    "caniuse-lite": "^1.0.30001178",
     "css-loader": "^1.0.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.1.0",
